--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ dependencies {
     //Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.android.play:core:1.8.0'
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
 
  //   testImplementation 'junit:junit:4.12'
     implementation project(':brightcovelibrary')
