--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,6 +174,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.android.play:core:1.8.0'
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation "com.android.installreferrer:installreferrer:1.0"
 
  //   testImplementation 'junit:junit:4.12'
     implementation project(':brightcovelibrary')
