--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,12 +114,10 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
-                    android:host="vipa.me"
+                    android:host="vipaott.test-app.link"
                     android:scheme="https" />
-<!--                <data-->
-<!--                    android:host="vipaott.test-app.link"-->
-<!--                    android:scheme="https" />-->
                 <!-- <data -->
                 <!-- android:host="www.watcho.com" -->
                 <!-- android:scheme="https" /> -->
