enveu setup wip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
         <!-- android:enabled="true" /> -->
         <activity
             android:name="me.vipa.app.activities.splash.ui.ActivitySplash"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
