--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -217,7 +217,7 @@
         <activity
             android:name=".activities.usermanagment.ui.SignUpActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateHidden|adjustPan|adjustResize" />
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activities.usermanagment.ui.ForgotPasswordActivity"
             android:launchMode="singleTop"
