--- a/app/build.gradle
+++ b/app/build.gradle
@@ -180,6 +180,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation "com.android.installreferrer:installreferrer:1.0"
 
+    //chips
+    implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
+
  //   testImplementation 'junit:junit:4.12'
     implementation project(':brightcovelibrary')
     implementation project(':enveusdk')
