--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,12 @@
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true"
         tools:replace="allowBackup">
-        <activity android:name=".activities.contentPreference.UI.ContentPreference"></activity>
+        <activity android:name=".activities.usermanagment.ui.SignUpThirdPage"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name=".activities.contentPreference.UI.ContentPreference"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".activities.onBoarding.UI.OnBoarding"
             android:screenOrientation="portrait" />
