--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,16 @@
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true"
         tools:replace="allowBackup">
-        <activity android:name=".activities.usermanagment.ui.SignUpThirdPage"
+        <activity android:name=".activities.profile.ui.AvatarImageActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activities.usermanagment.ui.SignUpThirdPage"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateHidden"></activity>
-        <activity android:name=".activities.contentPreference.UI.ContentPreference"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".activities.contentPreference.UI.ContentPreference"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activities.onBoarding.UI.OnBoarding"
             android:screenOrientation="portrait" />
