--- a/app/build.gradle
+++ b/app/build.gradle
@@ -183,6 +183,12 @@ dependencies {
     //chips
     implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
 
+    //Image upload
+    implementation 'com.amazonaws:aws-android-sdk-core:2.13.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.8.4'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.8.4'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.8.4'
+
  //   testImplementation 'junit:junit:4.12'
     implementation project(':brightcovelibrary')
     implementation project(':enveusdk')
