--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,9 +71,10 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" /> <!-- <service -->
-        <!-- android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService" -->
-        <!-- android:enabled="true" /> -->
+            android:value="@string/facebook_app_id" />
+         <service
+         android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+         android:enabled="true" />
         <activity
             android:name=".activities.splash.ui.ActivitySplash"
             android:launchMode="singleTop"
