--- a/app/build.gradle
+++ b/app/build.gradle
@@ -184,10 +184,9 @@ dependencies {
     implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
 
     //Image upload
-    implementation 'com.amazonaws:aws-android-sdk-core:2.13.+'
-    implementation 'com.amazonaws:aws-android-sdk-cognito:2.8.4'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.8.4'
-    implementation 'com.amazonaws:aws-android-sdk-ddb:2.8.4'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true }
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
 
  //   testImplementation 'junit:junit:4.12'
     implementation project(':brightcovelibrary')
