--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,8 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
-    implementation 'com.facebook.android:facebook-android-sdk:5.2.0'
+   // implementation 'com.facebook.android:facebook-android-sdk:5.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
