--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,7 @@
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
             android:screenOrientation="locked"
+            android:supportsPictureInPicture="true"
             android:theme="@style/MyMaterialTheme" />
         <activity
             android:name=".activities.live.LiveActivity"
@@ -221,6 +222,7 @@
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
             android:screenOrientation="locked"
+            android:supportsPictureInPicture="true"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <meta-data
