--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,10 @@
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true"
         tools:replace="allowBackup">
-        <activity android:name=".activities.OtherApplication.UI.OtherApplication"
-            android:launchMode="singleTop"></activity>
+        <activity android:name=".activities.ManageAccount.UI.ManageAccount"></activity>
+        <activity
+            android:name=".activities.OtherApplication.UI.OtherApplication"
+            android:launchMode="singleTop" />
         <activity
             android:name=".activities.onBoarding.UI.OnBoardingTab"
             android:screenOrientation="portrait" />
