--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -383,19 +383,27 @@
             android:value="com.brightcove.cast.DefaultOptionsProvider" />
 
         <activity
-            android:name=".activities.chromecast.ExpandedControlsActivity"
+            android:name="com.brightcove.cast.DefaultExpandedControllerActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
+            android:theme="@style/Theme.BrightcoveCast"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.CastVideosDark">
+            android:parentActivityName=".activities.homeactivity.ui.HomeActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
             </intent-filter>
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.vipa.app.activities.homeactivity.ui.HomeActivity" />
         </activity>
+
+        <meta-data
+            android:name="com.brightcove.cast.DefaultOptionsProvider.EXPANDED_CONTROLLER_ACTIVITY_CLASS_NAME"
+            android:value=".activities.chromecast.ExpandedControlsActivity" />
+        <meta-data
+            android:name="com.brightcove.cast.DefaultOptionsProvider.NOTIFICATION_TARGET_ACTIVITY_CLASS_NAME"
+            android:value="com.brightcove.cast.DefaultExpandedControllerActivity" />
+
     </application>
 
 </manifest>
