--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,12 @@
             android:name=".activities.contentPreference.UI.ContentPreference"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden" />
+
+        <activity
+            android:name=".activities.contentPreference.UI.SettingContentPreferences"
+            android:screenOrientation="locked"
+            android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".activities.onBoarding.UI.OnBoarding"
             android:screenOrientation="portrait" />
