--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -404,7 +404,7 @@
 
         <meta-data
             android:name="com.brightcove.cast.DefaultOptionsProvider.EXPANDED_CONTROLLER_ACTIVITY_CLASS_NAME"
-            android:value=".activities.chromecast.ExpandedControlsActivity" />
+            android:value="com.brightcove.cast.DefaultExpandedControllerActivity" />
         <meta-data
             android:name="com.brightcove.cast.DefaultOptionsProvider.NOTIFICATION_TARGET_ACTIVITY_CLASS_NAME"
             android:value="com.brightcove.cast.DefaultExpandedControllerActivity" />
