--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:theme="@style/MyMaterialTheme"
         android:usesCleartextTraffic="true"
         tools:replace="allowBackup">
+        <activity android:name=".activities.search.ui.FilterIconActivity"></activity>
         <activity android:name=".activities.ManageAccount.UI.ManageAccount"></activity>
         <activity
             android:name=".activities.OtherApplication.UI.OtherApplication"
