--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         compileOptions {
             sourceCompatibility = '1.8'
             targetCompatibility = '1.8'
+            vectorDrawables.useSupportLibrary = true
         }
 
 //        renderscriptTargetApi 18
