--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,7 +166,7 @@ dependencies {
 
     //Shimmer recycleview liberary
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
+   // implementation 'com.anjlab.android.iab.v3:library:1.0.44'
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
