--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -286,12 +286,12 @@
             android:name=".activities.search.ui.ActivityResults"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTop" />
-        <activity
+        <!--<activity
             android:name=".activities.purchase.ui.PurchaseActivity"
-            android:launchMode="singleTop" />
-        <activity
+            android:launchMode="singleTop" />-->
+       <!-- <activity
             android:name=".activities.membershipplans.ui.MemberShipPlanActivity"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop" />-->
 
         <receiver
             android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
