--- a/brightcovelibrary/build.gradle
+++ b/brightcovelibrary/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation "com.brightcove.player:android-cast-plugin:6.16.0"
     //s
     implementation 'com.google.android.gms:play-services-ads:20.3.0'
-    implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.core:core-ktx:1.6.0'
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
