--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'io.branch.sdk.android:library:5.0.7'
+    //noinspection GradleDependency
+    implementation 'io.branch.sdk.android:library:4.3.1'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.firebase:firebase-appindexing:20.0.0'
 
