--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -281,7 +281,8 @@
         <activity
             android:name=".activities.series.ui.SeriesDetailActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="locked" />
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".activities.search.ui.ActivityResults"
             android:configChanges="orientation|screenSize"
