--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -281,8 +281,7 @@
         <activity
             android:name=".activities.series.ui.SeriesDetailActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".activities.search.ui.ActivityResults"
             android:configChanges="orientation|screenSize"
