Removed tabs on episode_screen.xml, activity_series_detail.xml
fixed portrait and landscape issue, smooth scrolling issue, made back button non-scrollable on top left corner on activity_series_detail.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -280,8 +280,9 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activities.series.ui.SeriesDetailActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="locked" />
+            android:screenOrientation="sensor"
+            android:configChanges="orientation|screenSize"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".activities.search.ui.ActivityResults"
             android:configChanges="orientation|screenSize"
