--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
-
 buildscript {
     repositories {
         maven { url 'https://plugins.gradle.org/m2/' }
@@ -34,7 +33,9 @@ android {
             targetCompatibility = '1.8'
             vectorDrawables.useSupportLibrary = true
         }
-
+        kotlinOptions {
+            jvmTarget = '1.8'
+        }
 //        renderscriptTargetApi 18
 //        renderscriptSupportModeEnabled true
     }
@@ -121,7 +122,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
 
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -178,7 +180,6 @@ dependencies {
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.github.abdularis:parallaximageview:1.1'
     ///Room Dependency
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
@@ -204,10 +205,13 @@ dependencies {
     implementation project(':enveusdk')
    // implementation project(':flutter')
 
-    implementation("androidx.lifecycle:lifecycle-process:2.4.0")
-    implementation("com.moengage:moe-android-sdk:11.4.02")
-    implementation "com.moengage:addon-inbox:6.0.2"
+    implementation 'com.moengage:moe-android-sdk:11.4.00'
+    implementation "com.moengage:addon-inbox:3.0.3"
     implementation("com.moengage:inbox-core:1.0.00")
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation("androidx.core:core:1.6.0")
+    implementation("androidx.lifecycle:lifecycle-process:2.3.1")
+
 }
 
 // Apply the Performance Monitoring plugin
