--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,8 @@ buildscript {
     ext.kotlin_version = '1.5.10'
     ext.dagger_version = "2.38.1"
     repositories {
-        maven {
-            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
-        }
+        mavenCentral()
         jcenter()
-
         google()
     }
     dependencies {
@@ -29,12 +26,7 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url 'https://jitpack.io' }
-
-        maven {
-            url "https://maven.google.com"
-        }
-        maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
 
     }
     ext {
@@ -47,4 +39,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
